--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     implementation 'commons-cli:commons-cli:1.5.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'org.slf4j:slf4j-log4j12:2.0.3'
+    implementation 'redis.clients:jedis:4.3.1'
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'me.tongfei:progressbar:0.9.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
