--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ application {
 }
 
 jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
     manifest {
         attributes 'Main-Class': 'hk.edu.polyu.comp4133.Main'
     }
